[package]
name = "w8"
version = "0.1.0"
authors = ["Jimmy Zelinskie <jimmy.zelinskie+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8.0"
url = "2.1.1"
reqwest = "0.10.7"
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.32"
futures = "0.3.5"
