[package]
name = "w8"
description = "unix utility for waiting on ports, http status, and more"
categories = ["command-line-utilities"]
authors = ["Jimmy Zelinskie <jimmy.zelinskie+git@gmail.com>"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jzelinskie/w8"
repository = "https://github.com/jzelinskie/w8"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8.0"
url = "2.1.1"
reqwest = "0.10.7"
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.32"
futures = "0.3.5"
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
